[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/game/UI/decision_button.gd" type="Script" id=1]

[node name="DecisionApplicant" type="Control"]
anchor_right = 0.292
anchor_bottom = 0.233
margin_right = -0.00802612
margin_bottom = 0.199997
script = ExtResource( 1 )

[node name="DecisionOKButton" type="Button" parent="."]
anchor_right = 0.475
anchor_bottom = 0.407
margin_right = -0.0250092
margin_bottom = 0.0200005
text = "Accept"

[node name="DecisionNOKButton" type="Button" parent="."]
anchor_right = 0.475
anchor_bottom = 0.407
margin_left = 1.0
margin_top = 56.0
margin_right = 0.974991
margin_bottom = 56.02
text = "Deny"
